--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/ziti.html">Baked Ziti</a></li>
+        <li><a href="recipes/broccoli-alfredo.html">Broccoli Alfredo Pasta</a></li>
 </body>
 <html>
